--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "svgs": "svgr src/assets/svgs -d src/components/svgs --filename-case kebab --ignore-existing --icon"
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
