--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,6 +8,7 @@
     "lib": ["es2015", "dom"],
     "baseUrl": ".",
     "paths": {
+      "@/assets/*": ["src/assets/*"],
       "@/components/*": ["src/components/*"],
       "@/config/*": ["src/config/*"],
       "@/services/*": ["src/services/*"],
