--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@heroicons/react": "^1.0.5",
     "@reduxjs/toolkit": "^1.7.2",
     "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "firebase": "^9.6.6",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
     "next": "12.1.0",
+    "postcss-nesting": "^10.1.10",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -32,8 +34,9 @@
   "devDependencies": {
     "@svgr/cli": "^6.2.1",
     "autoprefixer": "10.4.5",
+    "eslint": "^8.19.0",
+    "eslint-config-next": "^12.2.2",
     "postcss": "^8.4.6",
-    "postcss-nested": "^5.0.6",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
     "url-loader": "^4.1.1"
