--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@svgr/cli": "^6.2.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "autoprefixer": "10.4.5",
     "eslint": "^8.19.0",
     "eslint-config-next": "^12.2.2",
