--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^9.6.6",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
+    "framer-motion": "^6.5.1",
     "next": "12.1.0",
     "postcss-nesting": "^10.1.10",
     "prop-types": "^15.8.1",
