--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
     "framer-motion": "^6.5.1",
-    "next": "12.1.0",
+    "next": "^12.2.2",
     "postcss-nesting": "^10.1.10",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
